# python

./: .sublime-project  pyproject.toml  python.code-workspace  stock_data.csv
AKtushare/: akshare_rank_cxfl_cleaned.py  akshare_rank_cxg_history_cleaned.py  akshare_rank_cxsl_cleaned.py  akshare_rank_ljqs_cleaned.py  akshare_stock_capital_flow_now.py  akshare_stock_daily.py  akshare_stock_zh_a_01.py  akshare_stock_zh_a_02.py  akshare_stock_zh_a_cleaned.py  akshare_test.py  baostock_query_history_k_data_plus.py  baostock_test.py  create_memorydb.py  initial_volsma_zh_a.py  pybroker_main.py  stock_basic.py  stock_basic_plus.py  stock_basic_tushare_plus.py  stock_days.py  tushare_main.py  tushare_realtime_stock_3days_up.py  tushare_select_stock_10days_up_25%.py  tushare_select_stock_3days_up.py  tushare_select_stock_3days_up_10%.py  tushare_select_stock_3days_up_15%.py  tushare_select_stock_3days_up_18%.py  tushare_select_stock_3days_up_5%.py  tushare_select_stock_4days_up.py  tushare_select_stock_4days_up_exchange_down.py  tushare_select_stock_4days_up_peTTM.py  tushare_select_stock_5days_up.py  tushare_select_stock_up_9%.py  tushare_select_stock_zh_close_01.py  tushare_select_stock_zh_current_01.py  tushare_stock_daily_saved.py  tushare_stock_daily_zh_a.py  tushare_stock_year_up300%.py  tushare_test.py  操作铁律.txt  股票代码_20251108_203420.txt
mesop/: main.py  mytest.py
office_tools/: invoice_analyse.py  main.py  main_invoice_analyse.py  mytest.py  mytest2.py  mytest3.py  mytest4.py  mytest5.py  mytest6.py  remove_duplicate_files.py  remove_duplicates_filename.py  test.py  (+1 more)
(+57 files in other folders)
