[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "akshare>=1.17.87",
    "baostock>=0.8.9",
    "pip>=25.3",
    "ruff>=0.14.6",
    "tushare>=1.4.24",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
]
